demo/bootstrap/argocd_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: argo-ingress
  namespace: argocd
spec:
  tls:
    - hosts:
        - INGRESS_HOST
      secretName: tls-argo
  rules:
    - host: INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  name: https
